[package]
name = "ociplex"
version = "0.1.0"
edition = "2021"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "suggestions", "derive", "cargo"]

[dependencies]
liboci-cli = { path = "../liboci-cli" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
