[package]
name = "ociplex"
description = "An OCI-compatible runtime multiplexing to various backends"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies.clap]
version = "4.0.32"
default-features = false
features = ["std", "suggestions", "derive", "cargo"]

[dependencies]
liboci-cli = { path = "../liboci-cli" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
containerd-shim-protos = "0.2.0"
